--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-iweb 在线课hh445ww
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" href="img/favicon.ico">
+	<title>iweb在线课堂</title>
+	<link rel="stylesheet"  href="css/base.css"/>
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<style>
+		.topbar{
+			width: 100%;
+			height: 29px;
+			line-height: 29px;
+			background: #F9F9F9;
+			border-bottom: 1px solid #eee;
+			text-align: right;
+		}
+		.container{
+			width: 1000px;
+			margin-left: auto;
+			margin-right: auto;
+			border:1px solid #aaa;
+		}
+		.topbar>.container>a,
+		.topbar>.container>span{
+			padding-left:1em ;
+		}
+		.theme{/*主题色*/
+			
+		}
+		.theme-reverse{/*主题色反色*/
+			color: #f60;
+		}
+		
+		.searchbar{
+			background: #fff;
+			 
+		}
+		.searchbar>.container{
+			padding-top:2em ;
+			padding-bottom: 2em;
+		}
+		
+		.search{/*搜索条右浮动*/
+			float: right;
+			padding-top:9px;
+		}
+		.search>input{
+			width: 430px;
+			height: 32px;
+			border: 1px solid #ccc;
+			outline:none;
+			padding-left: .8em;
+			padding-right: .8em;
+		}
+		.search>.fa-search{
+			background: #57bc4c;
+			color: #fff;
+			width: 50px;
+			height: 32px;
+			font-size: 2.2em;
+			line-height: 32px;
+			text-align: center;
+		}
+	</style>
+</head>
+<body>
+      <!-- 顶部条 -->
+	<div class="topbar">
+		
+		<div class="container">
+			<a href="#">
+				<span class="fa fa-star"></span>
+				收藏i前端
+			</a>
+			<a href="#">
+				<span class="fa fa-mobile-phone fa-lg"></span>
+				<span class="theme-reverse">下载手机客户端</span>
+			</a>
+			<span>
+				<span class="fa fa-envelope"></span>
+				反馈邮箱：iweb@tedu.cn
+			</span>
+			<span>
+				<span class="fa fa-phone fa-lg "></span>
+				客服电话：4008-200-200
+			</span>
+		</div>
+	</div>
+
+      <!-- 搜索条 -->
+	<div class="searchbar">
+		<div class="container">
+			<img src="img/logo.png" alt="iWeb LOGO">
+			<!-- 输入框 -->
+			<div class="search">
+			<input type="text" placeholder="课程搜索" ><span class="fa fa-search fa-lg"></span>
+			</div>
+			<!-- 我的购物车 -->
+		</div>
+	</div>
+
+</body>
+</html>
